--- a/mis2/nbproject/private/private.properties
+++ b/mis2/nbproject/private/private.properties
@@ -3,4 +3,5 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Documents and Settings\\disney\\.netbeans\\6.9\\build.properties
+jaxbwiz.endorsed.dirs=C:\\Program Files\\NetBeans 6.8\\ide12\\modules\\ext\\jaxb\\api
+user.properties.file=C:\\Users\\alex\\.netbeans\\6.8\\build.properties
