--- a/mis2/nbproject/project.properties
+++ b/mis2/nbproject/project.properties
@@ -2,8 +2,10 @@ annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+ant.customtasks.libs=JWSAntTasks
+application.desc=Miranda Workbench Software
 application.title=mis2
-application.vendor=disney
+application.vendor=Miranda Workbench Software
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,107 +28,108 @@ dist.jar=${dist.dir}/mis2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.ant-1.6.5.jar=C:\\aaaSuite\\lib6.8\\ant-1.6.5.jar
-file.reference.antlr-2.7.5.jar=C:\\aaaSuite\\lib6.8\\antlr-2.7.5.jar
-file.reference.appframework-1.0.3.jar=C:\\aaaSuite\\lib6.8\\appframework-1.0.3.jar
-file.reference.avalon-configuration.jar=C:\\aaaSuite\\lib6.8\\avalon-configuration.jar
-file.reference.barbecue-1.1.jar=C:\\aaaSuite\\lib6.8\\barbecue-1.1.jar
-file.reference.bcprov-jdk14.jar=C:\\aaaSuite\\lib6.8\\bcprov-jdk14.jar
-file.reference.beansbinding-1.2.1.jar=C:\\aaaSuite\\lib6.8\\beansbinding-1.2.1.jar
-file.reference.bsh-2.0b4.jar=C:\\aaaSuite\\lib6.8\\bsh-2.0b4.jar
-file.reference.cglib-2.2.jar=C:\\aaaSuite\\lib6.8\\cglib-2.2.jar
-file.reference.comm.jar=C:\\aaaSuite\\lib6.8\\comm.jar
-file.reference.commons-beanutils-bean-collections.jar=C:\\aaaSuite\\lib6.8\\commons-beanutils-bean-collections.jar
-file.reference.commons-beanutils-core.jar=C:\\aaaSuite\\lib6.8\\commons-beanutils-core.jar
-file.reference.commons-beanutils.jar=C:\\aaaSuite\\lib6.8\\commons-beanutils.jar
-file.reference.commons-collections-3.2.jar=C:\\aaaSuite\\lib6.8\\commons-collections-3.2.jar
-file.reference.commons-collections-testframework-3.2.jar=C:\\aaaSuite\\lib6.8\\commons-collections-testframework-3.2.jar
-file.reference.commons-configuration-1.1.jar=C:\\aaaSuite\\lib6.8\\commons-configuration-1.1.jar
-file.reference.commons-dbcp-1.2.1.jar=C:\\aaaSuite\\lib6.8\\commons-dbcp-1.2.1.jar
-file.reference.commons-digester-1.8.jar=C:\\aaaSuite\\lib6.8\\commons-digester-1.8.jar
-file.reference.commons-javaflow-20060411.jar=C:\\aaaSuite\\lib6.8\\commons-javaflow-20060411.jar
-file.reference.commons-lang-2.1.jar=C:\\aaaSuite\\lib6.8\\commons-lang-2.1.jar
-file.reference.commons-lang-exception-2.0.jar=C:\\aaaSuite\\lib6.8\\commons-lang-exception-2.0.jar
-file.reference.commons-logging-1.1.jar=C:\\aaaSuite\\lib6.8\\commons-logging-1.1.jar
-file.reference.commons-logging-adapters-1.1.jar=C:\\aaaSuite\\lib6.8\\commons-logging-adapters-1.1.jar
-file.reference.commons-logging-api.jar=C:\\aaaSuite\\lib6.8\\commons-logging-api.jar
-file.reference.commons-math-1.0.jar=C:\\aaaSuite\\lib6.8\\commons-math-1.0.jar
-file.reference.commons-pool-1.3.jar=C:\\aaaSuite\\lib6.8\\commons-pool-1.3.jar
-file.reference.commons-validator-1.3.1.jar=C:\\aaaSuite\\lib6.8\\commons-validator-1.3.1.jar
-file.reference.commons-vfs.jar=C:\\aaaSuite\\lib6.8\\commons-vfs.jar
-file.reference.DynamicJasper-2.0.10-tests.jar=C:\\aaaSuite\\lib6.8\\DynamicJasper-2.0.10-tests.jar
-file.reference.DynamicJasper-2.0.10.jar=C:\\aaaSuite\\lib6.8\\DynamicJasper-2.0.10.jar
-file.reference.Filters.jar=C:\\aaaSuite\\lib6.8\\Filters.jar
-file.reference.flexdock-0.4.1.jar=C:\\aaaSuite\\lib6.8\\flexdock-0.4.1.jar
-file.reference.freemarker.jar=C:\\aaaSuite\\lib6.8\\freemarker.jar
-file.reference.groovy-1.0.jar=C:\\aaaSuite\\lib6.8\\groovy-1.0.jar
-file.reference.imap.jar=C:\\aaaSuite\\lib6.8\\imap.jar
-file.reference.iReport.jar=C:\\aaaSuite\\lib6.8\\iReport.jar
-file.reference.itext-1.3.5.jar=C:\\aaaSuite\\lib6.8\\itext-1.3.5.jar
-file.reference.jakarta-bcel-20050813.jar=C:\\aaaSuite\\lib6.8\\jakarta-bcel-20050813.jar
-file.reference.jakarta-oro-2.0.8.jar=C:\\aaaSuite\\lib6.8\\jakarta-oro-2.0.8.jar
-file.reference.JasperBabylon-1.0.0.jar=C:\\aaaSuite\\lib6.8\\JasperBabylon-1.0.0.jar
-file.reference.jasperreports-2.0.2.jar=C:\\aaaSuite\\lib6.8\\jasperreports-2.0.2.jar
-file.reference.jasperreports-extensions-1.3.1.jar=C:\\aaaSuite\\lib6.8\\jasperreports-extensions-1.3.1.jar
-file.reference.javacup.jar=C:\\aaaSuite\\lib6.8\\javacup.jar
-file.reference.javassist.jar=C:\\aaaSuite\\lib6.8\\javassist.jar
-file.reference.jaxb-api.jar=C:\\aaaSuite\\lib6.8\\jaxb-api.jar
-file.reference.jaxb-impl.jar=C:\\aaaSuite\\lib6.8\\jaxb-impl.jar
-file.reference.jaxb-xjc.jar=C:\\aaaSuite\\lib6.8\\jaxb-xjc.jar
-file.reference.jaxen-1.1.1.jar=C:\\aaaSuite\\lib6.8\\jaxen-1.1.1.jar
-file.reference.jaxen-core.jar=C:\\aaaSuite\\lib6.8\\jaxen-core.jar
-file.reference.jaxen-dom.jar=C:\\aaaSuite\\lib6.8\\jaxen-dom.jar
-file.reference.jcalendar.jar=C:\\aaaSuite\\lib6.8\\jcalendar.jar
-file.reference.jcmdline-1.0.2.jar=C:\\aaaSuite\\lib6.8\\jcmdline-1.0.2.jar
-file.reference.jcommon-1.0.8.jar=C:\\aaaSuite\\lib6.8\\jcommon-1.0.8.jar
-file.reference.jcommon-xml-1.0.0.jar=C:\\aaaSuite\\lib6.8\\jcommon-xml-1.0.0.jar
-file.reference.jdic.jar=C:\\aaaSuite\\lib6.8\\jdic.jar
-file.reference.jdnc-jxcombobox.jar=C:\\aaaSuite\\lib6.8\\jdnc-jxcombobox.jar
-file.reference.jdom.jar=C:\\aaaSuite\\lib6.8\\jdom.jar
-file.reference.jdt-compiler-3.1.1.jar=C:\\aaaSuite\\lib6.8\\jdt-compiler-3.1.1.jar
-file.reference.jfreechart-1.0.0.jar=C:\\aaaSuite\\lib6.8\\jfreechart-1.0.0.jar
-file.reference.jmagallanes.jar=C:\\aaaSuite\\lib6.8\\jmagallanes.jar
-file.reference.jmf.jar=C:\\aaaSuite\\lib6.8\\jmf.jar
-file.reference.jpa.jar=C:\\aaaSuite\\lib6.8\\jpa.jar
-file.reference.jsearch.jar=C:\\aaaSuite\\lib6.8\\jsearch.jar
-file.reference.jsmoothgen-ant-0.9.7.jar=C:\\aaaSuite\\lib6.8\\jsmoothgen-ant-0.9.7.jar
-file.reference.json-lib-2.2.3-jdk15.jar=C:\\aaaSuite\\lib6.8\\json-lib-2.2.3-jdk15.jar
-file.reference.jsr173_api.jar=C:\\aaaSuite\\lib6.8\\jsr173_api.jar
-file.reference.jsr181-api.jar=C:\\aaaSuite\\lib6.8\\jsr181-api.jar
-file.reference.jsr250-api.jar=C:\\aaaSuite\\lib6.8\\jsr250-api.jar
-file.reference.jta.jar=C:\\aaaSuite\\lib6.8\\jta.jar
-file.reference.jtds-1.2.jar=C:\\aaaSuite\\lib6.8\\jtds-1.2.jar
-file.reference.juh.jar=C:\\aaaSuite\\lib6.8\\juh.jar
-file.reference.junit.jar=C:\\aaaSuite\\lib6.8\\junit.jar
-file.reference.log4j-core.jar=C:\\aaaSuite\\lib6.8\\log4j-core.jar
-file.reference.log4j.jar=C:\\aaaSuite\\lib6.8\\log4j.jar
-file.reference.looks-2.0-rc.jar=C:\\aaaSuite\\lib6.8\\looks-2.0-rc.jar
-file.reference.mail.jar=C:\\aaaSuite\\lib6.8\\mail.jar
-file.reference.mailapi.jar=C:\\aaaSuite\\lib6.8\\mailapi.jar
-file.reference.mysql-connector-java-5.1.5-bin.jar=C:\\aaaSuite\\lib6.8\\mysql-connector-java-5.1.5-bin.jar
-file.reference.png-encoder-1.5.jar=C:\\aaaSuite\\lib6.8\\png-encoder-1.5.jar
-file.reference.poi-3.0.1-FINAL-20070705.jar=C:\\aaaSuite\\lib6.8\\poi-3.0.1-FINAL-20070705.jar
-file.reference.rex-20070125.jar=C:\\aaaSuite\\lib6.8\\rex-20070125.jar
-file.reference.ridl.jar=C:\\aaaSuite\\lib6.8\\ridl.jar
-file.reference.saaj-api-1.3.jar=C:\\aaaSuite\\lib6.8\\saaj-api-1.3.jar
-file.reference.saxpath.jar=C:\\aaaSuite\\lib6.8\\saxpath.jar
-file.reference.servlet-api.jar=C:\\aaaSuite\\lib6.8\\servlet-api.jar
-file.reference.servlet.jar=C:\\aaaSuite\\lib6.8\\servlet.jar
-file.reference.slf4j-api.jar=C:\\aaaSuite\\lib6.8\\slf4j-api.jar
-file.reference.smtp.jar=C:\\aaaSuite\\lib6.8\\smtp.jar
-file.reference.sound.jar=C:\\aaaSuite\\lib6.8\\sound.jar
-file.reference.spring-2.5.jar=C:\\aaaSuite\\lib6.8\\spring-2.5.jar
-file.reference.swing-layout-1.0.4.jar=C:\\aaaSuite\\lib6.8\\swing-layout-1.0.4.jar
-file.reference.swing-worker-1.1.jar=C:\\aaaSuite\\lib6.8\\swing-worker-1.1.jar
-file.reference.tinylaf.jar=C:\\aaaSuite\\lib6.8\\tinylaf.jar
-file.reference.toniclf.jar=C:\\aaaSuite\\lib6.8\\toniclf.jar
-file.reference.toplink-essentials-agent.jar=C:\\aaaSuite\\lib6.8\\toplink-essentials-agent.jar
-file.reference.toplink-essentials.jar=C:\\aaaSuite\\lib6.8\\toplink-essentials.jar
-file.reference.xercesImpl.jar=C:\\aaaSuite\\lib6.8\\xercesImpl.jar
+file.reference.ant-1.6.5.jar=D:\\aaasuite\\lib6.8\\ant-1.6.5.jar
+file.reference.antlr-2.7.5.jar=D:\\aaasuite\\lib6.8\\antlr-2.7.5.jar
+file.reference.appframework-1.0.3.jar=D:\\aaasuite\\lib6.8\\appframework-1.0.3.jar
+file.reference.avalon-configuration.jar=D:\\aaasuite\\lib6.8\\avalon-configuration.jar
+file.reference.barbecue-1.1.jar=D:\\aaasuite\\lib6.8\\barbecue-1.1.jar
+file.reference.bcprov-jdk14.jar=D:\\aaasuite\\lib6.8\\bcprov-jdk14.jar
+file.reference.beansbinding-1.2.1.jar=D:\\aaasuite\\lib6.8\\beansbinding-1.2.1.jar
+file.reference.bsh-2.0b4.jar=D:\\aaasuite\\lib6.8\\bsh-2.0b4.jar
+file.reference.cglib-2.2.jar=D:\\aaasuite\\lib6.8\\cglib-2.2.jar
+file.reference.comm.jar=D:\\aaasuite\\lib6.8\\comm.jar
+file.reference.commons-beanutils-bean-collections.jar=D:\\aaasuite\\lib6.8\\commons-beanutils-bean-collections.jar
+file.reference.commons-beanutils-core.jar=D:\\aaasuite\\lib6.8\\commons-beanutils-core.jar
+file.reference.commons-beanutils.jar=D:\\aaasuite\\lib6.8\\commons-beanutils.jar
+file.reference.commons-collections-3.2.jar=D:\\aaasuite\\lib6.8\\commons-collections-3.2.jar
+file.reference.commons-collections-testframework-3.2.jar=D:\\aaasuite\\lib6.8\\commons-collections-testframework-3.2.jar
+file.reference.commons-configuration-1.1.jar=D:\\aaasuite\\lib6.8\\commons-configuration-1.1.jar
+file.reference.commons-dbcp-1.2.1.jar=D:\\aaasuite\\lib6.8\\commons-dbcp-1.2.1.jar
+file.reference.commons-digester-1.8.jar=D:\\aaasuite\\lib6.8\\commons-digester-1.8.jar
+file.reference.commons-javaflow-20060411.jar=D:\\aaasuite\\lib6.8\\commons-javaflow-20060411.jar
+file.reference.commons-lang-2.1.jar=D:\\aaasuite\\lib6.8\\commons-lang-2.1.jar
+file.reference.commons-lang-exception-2.0.jar=D:\\aaasuite\\lib6.8\\commons-lang-exception-2.0.jar
+file.reference.commons-logging-1.1.jar=D:\\aaasuite\\lib6.8\\commons-logging-1.1.jar
+file.reference.commons-logging-adapters-1.1.jar=D:\\aaasuite\\lib6.8\\commons-logging-adapters-1.1.jar
+file.reference.commons-logging-api.jar=D:\\aaasuite\\lib6.8\\commons-logging-api.jar
+file.reference.commons-math-1.0.jar=D:\\aaasuite\\lib6.8\\commons-math-1.0.jar
+file.reference.commons-pool-1.3.jar=D:\\aaasuite\\lib6.8\\commons-pool-1.3.jar
+file.reference.commons-validator-1.3.1.jar=D:\\aaasuite\\lib6.8\\commons-validator-1.3.1.jar
+file.reference.commons-vfs.jar=D:\\aaasuite\\lib6.8\\commons-vfs.jar
+file.reference.DynamicJasper-2.0.10-tests.jar=D:\\aaasuite\\lib6.8\\DynamicJasper-2.0.10-tests.jar
+file.reference.DynamicJasper-2.0.10.jar=D:\\aaasuite\\lib6.8\\DynamicJasper-2.0.10.jar
+file.reference.Filters.jar=D:\\aaasuite\\lib6.8\\Filters.jar
+file.reference.flexdock-0.4.1.jar=D:\\aaasuite\\lib6.8\\flexdock-0.4.1.jar
+file.reference.freemarker.jar=D:\\aaasuite\\lib6.8\\freemarker.jar
+file.reference.groovy-1.0.jar=D:\\aaasuite\\lib6.8\\groovy-1.0.jar
+file.reference.imap.jar=D:\\aaasuite\\lib6.8\\imap.jar
+file.reference.iReport.jar=D:\\aaasuite\\lib6.8\\iReport.jar
+file.reference.itext-1.3.5.jar=D:\\aaasuite\\lib6.8\\itext-1.3.5.jar
+file.reference.jakarta-bcel-20050813.jar=D:\\aaasuite\\lib6.8\\jakarta-bcel-20050813.jar
+file.reference.jakarta-oro-2.0.8.jar=D:\\aaasuite\\lib6.8\\jakarta-oro-2.0.8.jar
+file.reference.JasperBabylon-1.0.0.jar=D:\\aaasuite\\lib6.8\\JasperBabylon-1.0.0.jar
+file.reference.jasperreports-2.0.2.jar=D:\\aaasuite\\lib6.8\\jasperreports-2.0.2.jar
+file.reference.jasperreports-extensions-1.3.1.jar=D:\\aaasuite\\lib6.8\\jasperreports-extensions-1.3.1.jar
+file.reference.javacup.jar=D:\\aaasuite\\lib6.8\\javacup.jar
+file.reference.javassist.jar=D:\\aaasuite\\lib6.8\\javassist.jar
+file.reference.jaxb-api.jar=D:\\aaasuite\\lib6.8\\jaxb-api.jar
+file.reference.jaxb-impl.jar=D:\\aaasuite\\lib6.8\\jaxb-impl.jar
+file.reference.jaxb-xjc.jar=D:\\aaasuite\\lib6.8\\jaxb-xjc.jar
+file.reference.jaxen-1.1.1.jar=D:\\aaasuite\\lib6.8\\jaxen-1.1.1.jar
+file.reference.jaxen-core.jar=D:\\aaasuite\\lib6.8\\jaxen-core.jar
+file.reference.jaxen-dom.jar=D:\\aaasuite\\lib6.8\\jaxen-dom.jar
+file.reference.jcalendar.jar=D:\\aaasuite\\lib6.8\\jcalendar.jar
+file.reference.jcmdline-1.0.2.jar=D:\\aaasuite\\lib6.8\\jcmdline-1.0.2.jar
+file.reference.jcommon-1.0.8.jar=D:\\aaasuite\\lib6.8\\jcommon-1.0.8.jar
+file.reference.jcommon-xml-1.0.0.jar=D:\\aaasuite\\lib6.8\\jcommon-xml-1.0.0.jar
+file.reference.jdic.jar=D:\\aaasuite\\lib6.8\\jdic.jar
+file.reference.jdnc-jxcombobox.jar=D:\\aaasuite\\lib6.8\\jdnc-jxcombobox.jar
+file.reference.jdom.jar=D:\\aaasuite\\lib6.8\\jdom.jar
+file.reference.jdt-compiler-3.1.1.jar=D:\\aaasuite\\lib6.8\\jdt-compiler-3.1.1.jar
+file.reference.jfreechart-1.0.0.jar=D:\\aaasuite\\lib6.8\\jfreechart-1.0.0.jar
+file.reference.jmagallanes.jar=D:\\aaasuite\\lib6.8\\jmagallanes.jar
+file.reference.jmf.jar=D:\\aaasuite\\lib6.8\\jmf.jar
+file.reference.jpa.jar=D:\\aaasuite\\lib6.8\\jpa.jar
+file.reference.jsearch.jar=D:\\aaasuite\\lib6.8\\jsearch.jar
+file.reference.jsmoothgen-ant-0.9.7.jar=D:\\aaasuite\\lib6.8\\jsmoothgen-ant-0.9.7.jar
+file.reference.json-lib-2.2.3-jdk15.jar=D:\\aaasuite\\lib6.8\\json-lib-2.2.3-jdk15.jar
+file.reference.jsr173_api.jar=D:\\aaasuite\\lib6.8\\jsr173_api.jar
+file.reference.jsr181-api.jar=D:\\aaasuite\\lib6.8\\jsr181-api.jar
+file.reference.jsr250-api.jar=D:\\aaasuite\\lib6.8\\jsr250-api.jar
+file.reference.jta.jar=D:\\aaasuite\\lib6.8\\jta.jar
+file.reference.jtds-1.2.jar=D:\\aaasuite\\lib6.8\\jtds-1.2.jar
+file.reference.juh.jar=D:\\aaasuite\\lib6.8\\juh.jar
+file.reference.junit.jar=D:\\aaasuite\\lib6.8\\junit.jar
+file.reference.log4j-core.jar=D:\\aaasuite\\lib6.8\\log4j-core.jar
+file.reference.log4j.jar=D:\\aaasuite\\lib6.8\\log4j.jar
+file.reference.looks-2.0-rc.jar=D:\\aaasuite\\lib6.8\\looks-2.0-rc.jar
+file.reference.mail.jar=D:\\aaasuite\\lib6.8\\mail.jar
+file.reference.mailapi.jar=D:\\aaasuite\\lib6.8\\mailapi.jar
+file.reference.mysql-connector-java-5.1.5-bin.jar=D:\\aaasuite\\lib6.8\\mysql-connector-java-5.1.5-bin.jar
+file.reference.png-encoder-1.5.jar=D:\\aaasuite\\lib6.8\\png-encoder-1.5.jar
+file.reference.poi-3.0.1-FINAL-20070705.jar=D:\\aaasuite\\lib6.8\\poi-3.0.1-FINAL-20070705.jar
+file.reference.rex-20070125.jar=D:\\aaasuite\\lib6.8\\rex-20070125.jar
+file.reference.ridl.jar=D:\\aaasuite\\lib6.8\\ridl.jar
+file.reference.saaj-api-1.3.jar=D:\\aaasuite\\lib6.8\\saaj-api-1.3.jar
+file.reference.saxpath.jar=D:\\aaasuite\\lib6.8\\saxpath.jar
+file.reference.servlet-api.jar=D:\\aaasuite\\lib6.8\\servlet-api.jar
+file.reference.servlet.jar=D:\\aaasuite\\lib6.8\\servlet.jar
+file.reference.slf4j-api.jar=D:\\aaasuite\\lib6.8\\slf4j-api.jar
+file.reference.smtp.jar=D:\\aaasuite\\lib6.8\\smtp.jar
+file.reference.sound.jar=D:\\aaasuite\\lib6.8\\sound.jar
+file.reference.spring-2.5.jar=D:\\aaasuite\\lib6.8\\spring-2.5.jar
+file.reference.swing-layout-1.0.4.jar=D:\\aaasuite\\lib6.8\\swing-layout-1.0.4.jar
+file.reference.swing-worker-1.1.jar=D:\\aaasuite\\lib6.8\\swing-worker-1.1.jar
+file.reference.tinylaf.jar=D:\\aaasuite\\lib6.8\\tinylaf.jar
+file.reference.toniclf.jar=D:\\aaasuite\\lib6.8\\toniclf.jar
+file.reference.toplink-essentials-agent.jar=D:\\aaasuite\\lib6.8\\toplink-essentials-agent.jar
+file.reference.toplink-essentials.jar=D:\\aaasuite\\lib6.8\\toplink-essentials.jar
+file.reference.xercesImpl.jar=D:\\aaasuite\\lib6.8\\xercesImpl.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${reference.common2.jar}:\
+    ${libs.eclipselink.classpath}:\
     ${file.reference.ant-1.6.5.jar}:\
     ${file.reference.antlr-2.7.5.jar}:\
     ${file.reference.appframework-1.0.3.jar}:\
@@ -223,8 +226,7 @@ javac.classpath=\
     ${file.reference.toniclf.jar}:\
     ${file.reference.toplink-essentials-agent.jar}:\
     ${file.reference.toplink-essentials.jar}:\
-    ${file.reference.xercesImpl.jar}:\
-    ${libs.eclipselink.classpath}
+    ${file.reference.xercesImpl.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -250,6 +252,13 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
+jnlp.codebase.type=user
+jnlp.codebase.user=http://www.mysoftlabs.com/misService
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.offline-allowed=true
+jnlp.signed=true
 main.class=mis2.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
