Check in for Pack200.

--- a/school2/build.xml
+++ b/school2/build.xml
@@ -72,7 +72,7 @@
 
     -->
 <!-- Create a webstart tree -->
-    <target name="-sign-jars" depends="-jnlp-init-keystore,-check-signing-possible" if="jnlp.signed.true+signjarstask.available">
+    <target name="-sign-jars" depends="jar,-jnlp-init-keystore,-check-signing-possible" if="jnlp.signed.true+signjarstask.available">
         <apply executable="nbproject/packinit.bat" type="file"
           resolveexecutable="true" failonerror="true" ignoremissing="false">
             <fileset dir="dist">
