--- a/school2/nbproject/project.properties
+++ b/school2/nbproject/project.properties
@@ -1,3 +1,7 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.run.all.processors=true
+ant.customtasks.libs=JWSAntTasks
 application.desc=Vendor of automated system for school
 application.title=SchoolSoft
 application.vendor=Miranda Workbench Software
@@ -64,6 +68,7 @@ file.reference.jasperreports-2.0.2.jar=D:\\aaaSuite\\lib6.8\\jasperreports-2.0.2
 file.reference.jasperreports-extensions-1.3.1.jar=D:\\aaaSuite\\lib6.8\\jasperreports-extensions-1.3.1.jar
 file.reference.javacup.jar=D:\\aaaSuite\\lib6.8\\javacup.jar
 file.reference.javassist.jar=D:\\aaaSuite\\lib6.8\\javassist.jar
+file.reference.javaws.jar=C:\\Program Files (x86)\\Java\\jdk1.6.0_26\\jre\\lib\\javaws.jar
 file.reference.jaxb-api.jar=D:\\aaaSuite\\lib6.8\\jaxb-api.jar
 file.reference.jaxb-impl.jar=D:\\aaaSuite\\lib6.8\\jaxb-impl.jar
 file.reference.jaxb-xjc.jar=D:\\aaaSuite\\lib6.8\\jaxb-xjc.jar
@@ -118,7 +123,9 @@ file.reference.toplink-essentials-agent.jar=D:\\aaaSuite\\lib6.8\\toplink-essent
 file.reference.toplink-essentials.jar=D:\\aaaSuite\\lib6.8\\toplink-essentials.jar
 file.reference.xercesImpl.jar=D:\\aaaSuite\\lib6.8\\xercesImpl.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${reference.common2.jar}:\
     ${file.reference.ant-1.6.5.jar}:\
@@ -220,13 +227,16 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.6
 javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${libs.JWSAntTasks.classpath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
@@ -243,11 +253,16 @@ jnlp.codebase.type=user
 jnlp.codebase.user=http://www.mysoftlabs.com/schoolService
 jnlp.descriptor=application
 jnlp.enabled=false
+jnlp.mixed.code=default
 jnlp.offline-allowed=true
 jnlp.signed=true
+jnlp.signing=generated
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=school2.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 project.common2=../common2
 reference.common2.jar=${project.common2}/dist/common2.jar
