--- a/school2/nbproject/project.properties
+++ b/school2/nbproject/project.properties
@@ -23,7 +23,8 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/school2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
+endorsed.classpath=\
+    ${file.reference.javaws.jar}
 excludes=
 file.reference.ant-1.6.5.jar=D:\\aaaSuite\\lib6.8\\ant-1.6.5.jar
 file.reference.antlr-2.7.5.jar=D:\\aaaSuite\\lib6.8\\antlr-2.7.5.jar
@@ -252,7 +253,7 @@ jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 jnlp.codebase.type=user
 jnlp.codebase.user=http://www.mysoftlabs.com/schoolService
 jnlp.descriptor=application
-jnlp.enabled=false
+jnlp.enabled=true
 jnlp.mixed.code=default
 jnlp.offline-allowed=true
 jnlp.signed=true
